force-app/main/default/objects/position__c/position__c.object-meta.xml
<CustomObject>
    <label>position</label>
    <nameField>
        <label>position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>