force-app/main/default/objects/position__c/fields/apex__c.field-meta.xml
<CustomField>
    <fullName>apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>apex</label>
    <type>Checkbox</type>
</CustomField>