force-app/main/default/objects/position__c/fields/average_pay__c.field-meta.xml
<CustomField>
    <fullName>average_pay__c</fullName>
    <formula>(max_pay__c  +  min_pay__c )/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>average pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>