force-app/main/default/objects/position__c/fields/close_date__c.field-meta.xml
<CustomField>
    <fullName>close_date__c</fullName>
    <label>close date</label>
    <type>Date</type>
</CustomField>