force-app/main/default/objects/position__c/fields/days_open__c.field-meta.xml
<CustomField>
    <fullName>days_open__c</fullName>
    <formula>IF( ISBLANK( close_date__c ) , TODAY() - open_date__c  ,  close_date__c - open_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>