force-app/main/default/objects/position__c/fields/educational_req__c.field-meta.xml
<CustomField>
    <fullName>educational_req__c</fullName>
    <label>educational req</label>
    <type>TextArea</type>
</CustomField>