force-app/main/default/objects/position__c/fields/functional_area__c.field-meta.xml
<CustomField>
    <fullName>functional_area__c</fullName>
    <label>functional area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>finance</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>retail opr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>