force-app/main/default/objects/position__c/fields/hiring_mngr__c.field-meta.xml
<CustomField>
    <fullName>hiring_mngr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>hiring mngr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>positions</relationshipName>
    <type>Lookup</type>
</CustomField>