force-app/main/default/objects/position__c/fields/java__c.field-meta.xml
<CustomField>
    <fullName>java__c</fullName>
    <defaultValue>false</defaultValue>
    <label>java</label>
    <type>Checkbox</type>
</CustomField>