force-app/main/default/objects/position__c/fields/job_level__c.field-meta.xml
<CustomField>
    <fullName>job_level__c</fullName>
    <label>job level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>functional_area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>fn-100</fullName>
                <default>true</default>
                <label>fn-100</label>
            </value>
            <value>
                <fullName>fn-200</fullName>
            </value>
            <value>
                <fullName>fn-300</fullName>
            </value>
            <value>
                <fullName>hr-100</fullName>
            </value>
            <value>
                <fullName>it-100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>