force-app/main/default/objects/position__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>london</fullName>
            </value>
            <value>
                <fullName>austin</fullName>
            </value>
            <value>
                <fullName>mumbai</fullName>
            </value>
            <value>
                <fullName>san francisco</fullName>
            </value>
            <value>
                <fullName>tokyo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>