force-app/main/default/objects/position__c/fields/responsiilties__c.field-meta.xml
<CustomField>
    <fullName>responsiilties__c</fullName>
    <label>responsiilties</label>
    <type>TextArea</type>
</CustomField>