force-app/main/default/objects/position__c/fields/skills_req__c.field-meta.xml
<CustomField>
    <fullName>skills_req__c</fullName>
    <label>skills req</label>
    <type>TextArea</type>
</CustomField>