force-app/main/default/objects/position__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new position</fullName>
            </value>
            <value>
                <fullName>open-approved</fullName>
            </value>
            <value>
                <fullName>pending approval</fullName>
            </value>
            <value>
                <fullName>closed-filled</fullName>
            </value>
            <value>
                <fullName>closed-not approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>