force-app/main/default/objects/position__c/fields/travel_req__c.field-meta.xml
<CustomField>
    <fullName>travel_req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>travel req</label>
    <type>Checkbox</type>
</CustomField>