force-app/main/default/objects/position__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>full tme</fullName>
            </value>
            <value>
                <fullName>part time</fullName>
            </value>
            <value>
                <fullName>internship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>