force-app/main/default/objects/position__c/recordTypes/it_position.recordType-meta.xml
<RecordType>
    <fullName>it_position</fullName>
    <active>true</active>
    <description>for all it positions</description>
    <label>it position</label>
</RecordType>