force-app/main/default/objects/position__c/recordTypes/standard_position.recordType-meta.xml
<RecordType>
    <fullName>standard_position</fullName>
    <active>true</active>
    <description>for non it positions</description>
    <label>standard position</label>
</RecordType>