force-app/main/default/objects/position__c/validationRules/close_date_is_nt_spd.validationRule-meta.xml
<ValidationRule>
    <fullName>close_date_is_nt_spd</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( close_date__c )  &amp;&amp; 
 ISPICKVAL( status__c ,&quot;closed-filled&quot; ) ||  ISPICKVAL(status__c, &quot;closed-not approved&quot;)</errorConditionFormula>
    <errorDisplayField>close_date__c</errorDisplayField>
    <errorMessage>close date must be mntn</errorMessage>
</ValidationRule>