force-app/main/default/objects/position__c/validationRules/min_pay_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>min_pay_rule</fullName>
    <active>true</active>
    <errorConditionFormula>min_pay__c  &gt;  max_pay__c</errorConditionFormula>
    <errorMessage>min pay cannot exceed max pay</errorMessage>
</ValidationRule>